--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
     <header class="header">
         <div class="logo-container">
             <img src="image/fleetfeet logo.jpg" alt="Fleet Feet Logo" class="logo">
-            <img src="image/asics logo.png" alt="ASICS Logo" class="logo">
+            <img src="image/Asics-logo.jpg" alt="ASICS Logo" class="logo">
         </div>
     </header>
 
