--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 
             <!-- GEL-Nimbus 28 -->
             <div class="shoe-card">
-                <img src="image/gel-nimbus-28.avif" alt="ASICS GEL-Nimbus 28" class="shoe-image">
+                <img src="image/nimbus-28.webp" alt="ASICS GEL-Nimbus 28" class="shoe-image">
                 <div class="shoe-header">
                     <h2>GEL-Nimbus 28</h2>
                     <div class="shoe-price">$170.00</div>
@@ -434,7 +434,7 @@
 
             <!-- Megablast -->
             <div class="shoe-card">
-                <img src="image/megablast.avif" alt="ASICS Megablast" class="shoe-image">
+                <img src="image/megablast.jpg" alt="ASICS Megablast" class="shoe-image">
                 <div class="shoe-header">
                     <h2>Megablast</h2>
                     <div class="shoe-price">$225.00</div>
@@ -458,7 +458,7 @@
 
             <!-- Novablast 5 -->
             <div class="shoe-card">
-                <img src="image/novablast-5.avif" alt="ASICS Novablast 5" class="shoe-image">
+                <img src="image/novablast.webp" alt="ASICS Novablast 5" class="shoe-image">
                 <div class="shoe-header">
                     <h2>Novablast 5</h2>
                     <div class="shoe-price">$150.00</div>
@@ -487,10 +487,38 @@ A tongue wing construction in the upper helps improve the fit while reducing ton
                     </div>
                 </div>
             </div>
+            <div class="shoe-card">
+                <img src="image/sonicblast.jpg" alt="ASICS Novablast 5" class="shoe-image">
+                <div class="shoe-header">
+                    <h2>SonicBlast </h2>
+                    <div class="shoe-price">$180.00</div>
+                </div>
+                <div class="shoe-content">
+                    <div class="specs">
+                        <div class="spec-item">
+                            <span class="spec-label">Heel Drop</span>
+                            <span class="spec-value">8mm</span>
+                        </div>
+                        <div class="spec-item">
+                            <span class="spec-label">Weight (Men's)</span>
+                            <span class="spec-value">9.0 oz</span>
+                        </div>
+                        <div class="spec-item">
+                            <span class="spec-label">Weight (Women's)</span>
+                            <span class="spec-value">7.9 oz</span>
+                        </div>
+                    </div>
+                    <div class="shoe-description">
+                       The SONICBLAST™ shoe offers a lightweight and responsive ride that makes it functional for tempo runs and your daily training.​
+
+The midsole features a two-layered foam with FF BLAST™ MAX and FF TURBO²™ cushioning to help create a lightweight, bouncy, and advanced cushioning running experience.
+                    </div>
+                </div>
+            </div>
 
             <!-- GT-2000 14 -->
             <div class="shoe-card">
-                <img src="image/gt-2000-14.avif" alt="ASICS GT-2000 14" class="shoe-image">
+                <img src="image/GT-2000-14.jpg" alt="ASICS GT-2000 14" class="shoe-image">
                 <div class="shoe-header">
                     <h2>GT-2000 14</h2>
                     <div class="shoe-price">$140.00</div>
@@ -522,7 +550,7 @@ The midsole is updated with a FF BLAST™ MAX cushioning unit. Creating a more e
 
             <!-- GEL-Kayano 32 -->
             <div class="shoe-card">
-                <img src="image/gel-kayano-32.avif" alt="ASICS GEL-Kayano 32" class="shoe-image">
+                <img src="image/kayano-32.webp" alt="ASICS GEL-Kayano 32" class="shoe-image">
                 <div class="shoe-header">
                     <h2>GEL-Kayano 32</h2>
                     <div class="shoe-price">$180.00</div>
@@ -554,7 +582,7 @@ A reinforced tongue wing along the arch also provides additional comfort and sup
 
             <!-- Trabuco 14 -->
             <div class="shoe-card">
-                <img src="image/trabuco-14.avif" alt="ASICS Trabuco 14" class="shoe-image">
+                <img src="image/Trabuco 14.webp" alt="ASICS Trabuco 14" class="shoe-image">
                 <div class="shoe-header">
                     <h2>Trabuco 14</h2>
                     <div class="shoe-price">$145.00</div>
