Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
         <div class="intro">
             <h1>Fleet Feet's ASICS Running Shoe Collection</h1>
             <p>
-                Discover the perfect ASICS running shoe for your journey. Whetherkfou're seeking max cushioning, 
+               Discover the perfect ASICS running shoe for your journey. Whether you're seeking max cushioning, 
                 reliable stability, or trail-ready performance, each shoe is expertly engineered with ASICS' 
                 industry-leading foam technology to support your unique stride and help you go further with confidence.
             </p>
@@ -615,4 +615,5 @@ Approximately 4 grams lighter than the previous version, this shoe features an e
         </div>
     </div>
 </body>
+
 </html>
