--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
             <div class="shoe-card">
                 <img src="image/nimbus-28.webp" alt="ASICS GEL-Nimbus 28" class="shoe-image">
                 <div class="shoe-header">
-                    <h2>GEL-Nimbus 28</h2>
+                    <h2>GEL Nimbus 28</h2>
                     <div class="shoe-price">$170.00</div>
                 </div>
                 <div class="shoe-content">
@@ -520,7 +520,7 @@ The midsole features a two-layered foam with FF BLAST™ MAX and FF TURBO²™ c
             <div class="shoe-card">
                 <img src="image/GT-2000-14.jpg" alt="ASICS GT-2000 14" class="shoe-image">
                 <div class="shoe-header">
-                    <h2>GT-2000 14</h2>
+                    <h2>GT 2000 14</h2>
                     <div class="shoe-price">$140.00</div>
                 </div>
                 <div class="shoe-content">
@@ -552,7 +552,7 @@ The midsole is updated with a FF BLAST™ MAX cushioning unit. Creating a more e
             <div class="shoe-card">
                 <img src="image/kayano-32.webp" alt="ASICS GEL-Kayano 32" class="shoe-image">
                 <div class="shoe-header">
-                    <h2>GEL-Kayano 32</h2>
+                    <h2>GEL Kayano 32</h2>
                     <div class="shoe-price">$180.00</div>
                 </div>
                 <div class="shoe-content">
@@ -617,3 +617,4 @@ Approximately 4 grams lighter than the previous version, this shoe features an e
 </body>
 
 </html>
+
